Replace String#isBlank call with StringUtils#isBlank for java 8 compat